chore: changes for new version