@@ -20,7 +20,7 @@ import org.apache.commons.beanutils.converters.AbstractConverter;
  *
  * <p>This implementation converts Map&lt;String,T&gt; to Map&lt;String,mapClass&gt;.
  * The mapClass can be set to the Class that is needed.</p>
- * 
+ *
  * @author fzr
  */
 public class MapConverter extends AbstractConverter{
@@ -28,13 +28,19 @@ public class MapConverter extends AbstractConverter{
     private Class mapClass;
 
     /**
+     * Constructor.
+     */
+    public MapConverter() {
+    }
+
+    /**
      * Converts the input object into a <code>Map</code> object.
-     *  
+     *
      * @param <T> Target type of the conversion.
      * @param type Data type to which this value should be converted.
      * @param value TThe input value to be converted.
      * @return The converted <code>Map</code>
-     * @throws Throwable if an error occurs converting to the specified type 
+     * @throws Throwable if an error occurs converting to the specified type
      */
     @Override
     protected <T> T convertToType(Class<T> type, Object value) throws Throwable {
@@ -42,73 +48,73 @@ public class MapConverter extends AbstractConverter{
         if(mapClass == null) {
             throw new IllegalAccessException("mapClass is not initialized by setListClass().");
         }
-        
+
         final Class<T> sourceType = (Class<T>) value.getClass();
         Map<String, Object> returnMap = new HashMap<>();
-            
+
         if(value instanceof LinkedTreeMap){
             for (String key : ((LinkedTreeMap<String, Object>) value).keySet()) {
-                Object instanz = this.mapClass.newInstance();
-                Object val = ((LinkedTreeMap) value).get(key);   
-                BeanUtils.setProperty(instanz,"name",key); 
+                Object instanz = this.mapClass.getDeclaredConstructor().newInstance();
+                Object val = ((LinkedTreeMap) value).get(key);
+                BeanUtils.setProperty(instanz,"name",key);
                 for (String key2 : ((LinkedTreeMap<String, Object>) val).keySet()) {
-                    Object val2 = ((LinkedTreeMap) val).get(key2);            
-                    BeanUtils.setProperty(instanz,key2,val2);                                
-                }           
+                    Object val2 = ((LinkedTreeMap) val).get(key2);
+                    BeanUtils.setProperty(instanz,key2,val2);
+                }
                 returnMap = toClassMap(sourceType,instanz,returnMap);
-            }         
+            }
             return (T) returnMap;
         }
-        
+
         if(value instanceof String){
             return (T) toStringMap(sourceType,value.toString(),returnMap);
         }
-        
+
         final String stringValue = value.toString().trim();
         if (stringValue.length() == 0) {
             return handleMissing(type);
         }
-            
+
         return (T) toStringMap(sourceType,stringValue,returnMap);
     }
-    
-    /** 
+
+    /**
      * Default Conversion to specified <code>Class</code>.
-     * 
+     *
      * @param type The Class of the type
      * @param value The value of the Object
      * @param returnMap A Map of all currently converted Objects
      * @return A Map
      */
     private Map<String,Object> toClassMap(final Class type, final Object value,Map<String, Object> returnMap) {
-        
-        if (type.equals(LinkedTreeMap.class)) {   
+
+        if (type.equals(LinkedTreeMap.class)) {
             if (value.getClass().equals(Thumbnail.class)) {
                 returnMap.put(((Thumbnail)value).getName(),value);
-            }     
+            }
             return returnMap;
         }
-        
+
         return toStringMap(type,value.toString(),returnMap);
     }
-    
+
     /**
      * Default toString Conversion.
-     * 
+     *
      * @param type The Class of the type
-     * @param value The String value 
+     * @param value The String value
      * @param returnMap A Map of all currently converted Objects
      * @return A Map
      */
-    
+
      private Map<String,Object> toStringMap(final Class type, final String value,Map<String, Object> returnMap) {
-                
-        if (type.equals(String.class)) {      
+
+        if (type.equals(String.class)) {
             returnMap.put(value,value);
             return  returnMap;
         }
-        
-        returnMap.put(value,value);    
+
+        returnMap.put(value,value);
         return returnMap;
     }
 
@@ -119,17 +125,17 @@ public class MapConverter extends AbstractConverter{
 
     /**
      * Set-Method for the MapClass
-     * 
+     *
      * @param aClass  The Parameter that is used
      */
     public void setMapClass(Class<Thumbnail> aClass) {
         this.mapClass = aClass;
     }
-    
+
     /**
      * Get-Method for the MapClass
-     * 
-     * @return this.mapClass 
+     *
+     * @return this.mapClass
      */
     public Class getMapClass(){
         return this.mapClass;
